# what-pressed

./: README.md  bump-version.mjs  index.html  package-lock.json  package.json
.github/workflows/: release.yml
obs-source/: display.css  display.html  display.js
src/: App.css  App.tsx
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: community.rs  lib.rs  main.rs  state.rs
src-tauri/src/atlas/: default.rs  mod.rs
src-tauri/src/input/: gamepad.rs  keyboard_mouse.rs  manager.rs  mod.rs  types.rs
src-tauri/src/layout/: mod.rs
src-tauri/src/server/: mod.rs  web_server.rs
src/components/atlas/: AtlasBuilder.tsx  AtlasEntryEditor.tsx  AtlasImage.tsx  SourceImageRectSelector.tsx
src/components/community/: CommunityAtlasCard.tsx  CommunityBrowser.tsx
src/components/display/: DisplayRenderer.tsx  DisplayView.tsx
src/components/layout/: AddEntryModal.tsx  LayerList.tsx  LayoutCanvas.tsx  LayoutEditor.tsx  LayoutEntryProperties.tsx  StyleManager.tsx
src/components/shared/: InputAssign.tsx
src/hooks/: useAtlas.ts  useInputState.ts  useLayout.ts  useWebviewInput.ts
src/lib/: commands.ts  communityCommands.ts
src/types/: atlas.ts  community.ts  input.ts  layout.ts
